# DYbyDXLLM

./: .gitignore  CMakeLists.txt  README.md  benchmark_log.txt  build_win.bat  gemma_essay.txt  miniCPM_essay.txt  phi3_essay.txt  run_all_benchmarks.bat
cli/: main.cpp
include/dybydx/core/: AdvancedVendorOptimizations.h  BpeTokenizer.h  DirectStorageLoader.h  DirectXEngine.h  GgufLoader.h  IntelOpenVINOInterop.h  KVCacheManager.h  ModelPipeline.h  MultiFormatTokenizer.h
include/dybydx/include/dybydx/core/: AdvancedVendorOptimizations.h
knowledge/: HOW-TO-FIX.md
shaders/: DirectMLLinAlg.hlsl  QuantizedGEMM.hlsl  TurboKernels.hlsl
src/core/: AdvancedVendorOptimizations.cpp  BpeTokenizer.cpp  DirectStorageLoader.cpp  DirectXEngine.cpp  GgufLoader.cpp  IntelOpenVINOInterop.cpp  KVCacheManager.cpp  ModelPipeline.cpp
tools/: extract_weights.py
tools/DirectLLM.CLI/: DirectLLM.CLI.csproj  Program.cs  TraceLogger.cs
